--- a/06-发布订阅模式.html
+++ b/06-发布订阅模式.html
@@ -16,21 +16,20 @@
           // console.log('constructor this.subs:', this.subs); //对象
         }
 
+        // this.subs = Object.create(null); //也可以是空对象{}
         subs = {};
 
         // 订阅事件
-        $on(eventType, handler) {
-          // this.subs[eventType] = this.subs[eventType] || [];
-          if (!this.subs[eventType]) {
-            this.subs[eventType] = []; //默认数组
-          }
+        $on = (eventType, handler) => {
+          console.log('this 111', this);
+          this.subs[eventType] = this.subs[eventType] || []; //默认数组
           // console.log('$on handler :', handler);
           this.subs[eventType].push(handler);
           // console.log('$on this.subs[eventType]:', this.subs[eventType]);
-        }
+        };
 
         // 发布事件
-        $emit(eventType) {
+        $emit = eventType => {
           // console.log('this.subs', this.subs);
           //只要不是undefined,就说明this.subs[eventType]是数组
           if (this.subs[eventType]) {
@@ -39,16 +38,45 @@
               handler();
             });
           }
-        }
+        };
+
+        // // 订阅事件
+        // $on(eventType, handler) {
+        //   // this.subs[eventType] = this.subs[eventType] || [];
+        //   if (!this.subs[eventType]) {
+        //     this.subs[eventType] = []; //默认数组
+        //   }
+        //   // console.log('$on handler :', handler);
+        //   this.subs[eventType].push(handler);
+        //   // console.log('$on this.subs[eventType]:', this.subs[eventType]);
+        // }
+
+        // // 发布事件
+        // $emit(eventType) {
+        //   // console.log('this.subs', this.subs);
+        //   //只要不是undefined,就说明this.subs[eventType]是数组
+        //   if (this.subs[eventType]) {
+        //     this.subs[eventType].forEach(handler => {
+        //       // console.log('handler 0:', handler);
+        //       handler();
+        //     });
+        //   }
+        // }
       }
 
       // 测试
       let em = new EventEmitter();
       // console.log('EventEmitter.prototype:', EventEmitter.prototype);
       console.log('em:', em);
-      console.log('-------------------------')
+      console.log('-------------------------');
       em.$on('click1', () => {
         console.log('click1 运行了 ...');
+      });
+      em.$on('click1', () => {
+        console.log('click1 运行了 ...');
+      });
+      em.$on('click2', () => {
+        console.log('click2 运行了 ...');
       });
       em.$on('click2', () => {
         console.log('click2 运行了 ...');
