完整的双向绑定-封装版

--- a/完整的双向绑定-封装版.html
+++ b/完整的双向绑定-封装版.html
@@ -21,11 +21,7 @@
       </div>
     </div>
     <script>
-      // 实现监听器(数据的任何变化，会通知视图更新)
       // 发布订阅模式
-      /**
-       * 发布者
-       */
       function Subject() {
         // 单个发布者的所有订阅者
         this.observers = [];
@@ -41,11 +37,12 @@
         };
       }
 
-      /**
-       * 订阅者
-       */
-      function Observer(queue, key, callback) {
-        queue[key].attach(callback);
+      // 观察者
+      function Observer(queue) {
+        this.queue = queue;
+        this.add = (key, callback) => {
+          this.queue[key].attach(callback);
+        };
       }
 
       /**
@@ -70,37 +67,38 @@
       }
 
       // 模板解析
-      function Compile(el, data) {
+      function Compile(el, vm) {
         // 关联自定义特性
         if (el.attributes) {
           // console.dir([...el.attributes]);
           // 扩展符把类数组转成真正的数组
           [...el.attributes].forEach(attribute => {
             if (attribute.name.includes('v-')) {
-              Update[attribute.name](el, data, attribute.value);
+              Update[attribute.name](el, vm.data, attribute.value, vm);
             }
           });
         }
 
         // 递归解析所有DOM
         [...el.childNodes].forEach(child => {
-          return Compile(child, data);
+          return Compile(child, vm);
         });
+        return el;
       }
 
       // 自定义特性对应的事件
       const Update = {
-        'v-text'(el, data, key) {
+        'v-text'(el, data, key, vm) {
           // 初始化DOM内容
           el.innerText = data[key];
           // 订阅 value 值的变化: 创建一个数据的订阅，数据变化后更新展示内容
-          Observer(messageQueue, key, value => {
+          vm.observer.add(key, value => {
             console.warn(key, 'v-text updated:', value);
             console.log('v-text value :>> ', value);
             el.innerText = value;
           });
         },
-        'v-model'(input, data, key) {
+        'v-model'(input, data, key, vm) {
           // 初始化Input默认值
           input.value = data[key];
 
@@ -110,7 +108,7 @@
           });
 
           // 订阅 value 值的变化: 创建一个数据的订阅，数据变化后更新展示内容
-          Observer(messageQueue, key, value => {
+          vm.observer.add(key, value => {
             console.warn(key, 'v-model updated:', value);
             console.log('v-model value :>> ', value);
             input.value = value;
@@ -118,26 +116,29 @@
         }
       };
 
-      // 消息队列
-      const messageQueue = {};
-      // 数据
-      const constData = { value1: '', value2: '' }; //常量对象
-      // 将每个数据属性添加可订阅的入口(添加到订阅)
-      for (const key in constData) {
-        messageQueue[key] = new Subject();
+      // 封装
+      function Vue({ el, data }) {
+        // initProxy
+        this.messageQueue = {};
+        this.observer = new Observer(this.messageQueue);
+        this.data = ProxyWatcher(data, this.messageQueue);
+        // initState
+        for (let key in data) {
+          this.messageQueue[key] = new Subject(); // 将每个数据属性添加可订阅的入口(添加到订阅)
+        }
+
+        // // initRender
+        // // initEvents
+        this.el = Compile(el, this);
       }
-      // console.log('constData :>> ', constData);
-      const refData = ProxyWatcher(constData, messageQueue); //常量对象
 
-      // // 将每个数据属性添加可订阅的入口(添加到订阅者的消息队列中)
-      // for (const key in refData) {
-      //   messageQueue[key] = new Subject();
-      // }
-
-      // console.log('refData :>> ', refData);
-      // console.log('messageQueue :>> ', messageQueue);
-      // 解析+关联
-      Compile(document.querySelector('#app'), refData);
+      // 数据
+      const refData = { value1: '', value2: '' }; //数据
+      // 实例
+      const vm = new Vue({
+        el: document.querySelector('#app'),
+        data: refData
+      });
     </script>
   </body>
 </html>
